Fix horizontal scroll

--- a/styles.css
+++ b/styles.css
@@ -35,8 +35,9 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 16px;
-    overflow: hidden;
+    margin: 16px auto;
+    width: 100%;
+    overflow-x: hidden;
 }
 
 /* .flex-container {
